# bsf_docker

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  description.json  gitlab-ci.yml  hooks.json  pyproject.toml
assets/: pleias-clear-full.avif
data/both/crsv.lance/_transactions/: 0-2f865c7a-8548-47d3-b55b-b3edb610d05b.txn  1-bbe6755c-584c-4910-b110-5b28c7107342.txn  10-d4430c05-8b32-4d3c-ac10-2ff2d1bfde3b.txn  11-a253a8cb-ebfc-4b3c-a696-d69500767a73.txn  12-b297bc6c-fb1a-42aa-95d7-5ff5cb507ed9.txn  13-b8c6e0d0-e65b-475c-8843-80099b702fc4.txn  14-298f8f28-7eae-4e65-9058-7125f83dd800.txn  15-8285da67-59b9-42fa-9bb7-a037daf3d51f.txn  16-77fa64bc-31f7-402e-af10-23145843e84e.txn  17-4b899393-b06d-4f57-80b3-203136da5ff9.txn  18-754c5ce7-49fb-4840-b5e0-0f37210335a4.txn  19-05a86dc5-94ee-43f7-a5d2-08d47bc8db8e.txn  2-a8fd1603-fc39-430b-855f-c2b473515b67.txn  20-3deeec88-2166-4206-b9fd-d602917ecfd0.txn  21-ec603efc-3f99-4640-adbf-7729edccad07.txn  22-013420ef-e8d9-4f7f-97ae-17509a227748.txn  23-9fece41d-0377-41bb-af4a-8fe981e1f201.txn  24-013579a6-64c6-4483-b002-1b6d93f79a10.txn  25-fa2b1a88-7e21-4424-be25-97e65f6087a9.txn  26-32ca8e4c-7a69-431b-b1e0-e486f8cb008e.txn  3-728ce1a0-de5b-4978-bc9f-a81e18da1894.txn  4-b2ff972d-ed91-4147-ae06-7ed73bd79464.txn  5-5671c97d-0865-4a90-809b-76d583ecf9b6.txn  6-3bd2eb67-3625-4c48-af8d-ebf83c7104e5.txn  7-4de789f5-82e2-4cc2-a7e2-f22b77656b94.txn  8-ebbfd801-2b3b-4a1e-ab32-293d53375c20.txn  (+1 more)
src/: generation.py  inference.py  inference_old.py  inference_stream.py  main.py  main_stream.py
(+210 files in other folders)
